App/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kkservice
  labels:
    app: kkapp
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: kkapp
  type: ClusterIP
