App/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kkingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kkservice
            port:
              number: 80
